# k36-sdl-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  c_cpp_properties.json  format.sh  runner.sh
scripts/: build.all.sh  build.console.sh  build.native.sh  build.sdl.sh  build.sdl2.sh  build.vendor.sh  build.vendor_json.sh  profile.sh  run.k36.sh  run.native.sh
src/: App.hpp  AssetConfig.hpp  config.hpp  main.cpp
src/Core/: AssetServer.hpp  Context.hpp  Scene.hpp  Ticker.hpp  Tile.hpp
src/Core/Allocator/: Allocator.cpp  Allocator.hpp
src/Core/UI/: Column.hpp  Component.hpp  ImageView.hpp  ProgressView.hpp  TextView.hpp  UI.hpp  VStackView.hpp
src/Logger/: Logger.hpp
src/Scenes/: LoadingScene.cpp  LoadingScene.hpp  WorldScene.cpp  WorldScene.hpp
src/scenes/: LoadingScene.cpp  LoadingScene.hpp
toolchain/: aarch64-toolchain.cmake  native-gcc10.cmake
